# wearables_international

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wearables_python/: __init__.py  read_nowatch.py  read_plus.py
src/wearables_python/helpers/: read_nowatch.py  read_plus.py
src/wearables_python/preprocessing/: preprocessing_main.py
src/wearables_python/preprocessing/preprocessing_e4_plus/: __init__.py  preprocessing_acc.py  preprocessing_bvp.py  preprocessing_eda.py  preprocessing_temp.py
src/wearables_python/sample_data/: unprocessed_metric_data_Nowatch_20241204_0807_0820.txt
src/wearables_python/sample_data/2024-12-04/102024-3YK3M161JQ/digital_biomarkers/aggregated_per_minute/: 1-1-102024_2024-12-04_accelerometers-std.csv  1-1-102024_2024-12-04_actigraphy-counts.csv  1-1-102024_2024-12-04_activity-classification.csv  1-1-102024_2024-12-04_activity-counts.csv  1-1-102024_2024-12-04_activity-intensity.csv  1-1-102024_2024-12-04_body-position.csv  1-1-102024_2024-12-04_eda.csv  1-1-102024_2024-12-04_met.csv  1-1-102024_2024-12-04_prv.csv  1-1-102024_2024-12-04_pulse-rate.csv  1-1-102024_2024-12-04_respiratory-rate.csv  1-1-102024_2024-12-04_sleep-detection.csv  1-1-102024_2024-12-04_step-counts.csv  1-1-102024_2024-12-04_temperature.csv  1-1-102024_2024-12-04_wearing-detection.csv
src/wearables_python/sample_data/2024-12-04/102024-3YK3M161JQ/raw_data/v6/: 1-1-102024_1733270746.avro  1-1-102024_1733272553.avro  1-1-102024_1733274359.avro  (+12 more)
tests/: test_wearables_python.py
